# kernelresolver

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  kernel_resolver.c  kernel_resolver.h
